8347532: [CRaC] CRaCResetStartTime breaks cgroups caching
Co-authored-by: Timofei Pushkin <tpushkin@openjdk.org>
Reviewed-by: rvansa